--- a/loan_helper/templates/pdf/daily_report.html
+++ b/loan_helper/templates/pdf/daily_report.html
@@ -1,18 +1,35 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html lang="pl">
 <head>
     <title>Daily report</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
-<body>
-<h1>{{ date }} report</h1>
+<body class="bg-light">
+<h2 style="text-align: center">Daily report - {{ date }}</h2>
 {% for key, values in data.items %}
+
     <h4>{{ key }}</h4>
-    {% for value in values %}
-    <p>{{ value }}</p>
-    {% endfor %}
+
+    <table class="table" style="background: rgba(230,233,235,0.62)">
+        <tr style="background: rgba(220,223,225,0.62)">
+            <th>Details</th>
+        </tr>
+            {% for value in values %}
+        <tr>
+            <td>{{ value }}</td>
+        </tr>
+            {% endfor %}
+    </table>
 {% endfor %}
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
 </body>
 </html>
