--- a/loan_helper/templates/pdf/daily_report_data.html
+++ b/loan_helper/templates/pdf/daily_report_data.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Daily report data</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
-<body>
-            <form method="post">
+<body class="bg-light">
+<h2 style="text-align: center">Choose clients to generate report</h2>
+            <form method="post" class="form-group" style="display: inline-block; text-align: justify; width: 200px">
                 {% csrf_token %}
                 {% for client in clients %}
                         <input type="checkbox" name="choice" value="{{ client.id }}">{{ client }}<br>
                 {% endfor %}
                         <input type="submit" value="Generate report" name="generate"><br>
             </form>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
 </body>
 </html>
