--- a/loan_helper/templates/index.html
+++ b/loan_helper/templates/index.html
@@ -34,6 +34,7 @@
                         <a href="/all_brokers/" class="list-group-item list-group-item-action">Show Broker List</a>
                         <a href="/all_banks/" class="list-group-item list-group-item-action">Show Bank List</a>
                         <a href="/all_loans/" class="list-group-item list-group-item-action">Show Successful Loan list</a>
+                        <a href="/report/" class="list-group-item list-group-item-action">Generate report</a>
                     </div>
                 </div>
             </div>
