broker report added

--- a/loan_helper/templates/index.html
+++ b/loan_helper/templates/index.html
@@ -34,7 +34,10 @@
                         <a href="/all_brokers/" class="list-group-item list-group-item-action">Show Broker List</a>
                         <a href="/all_banks/" class="list-group-item list-group-item-action">Show Bank List</a>
                         <a href="/all_loans/" class="list-group-item list-group-item-action">Show Successful Loan list</a>
-                        <a href="/report/" class="list-group-item list-group-item-action">Generate report</a>
+                        <a href="/detailed_report/" class="list-group-item list-group-item-action">
+                            Generate detailed report</a>
+                        <a href="/broker_report/" class="list-group-item list-group-item-action">
+                            Generate broker report</a>
                     </div>
                 </div>
             </div>
