--- a/loan_helper/templates/index.html
+++ b/loan_helper/templates/index.html
@@ -38,6 +38,8 @@
                             Generate detailed report</a>
                         <a href="/broker_report/" class="list-group-item list-group-item-action">
                             Generate broker report</a>
+                        <a href="/loan_calculator/" class="list-group-item list-group-item-action">
+                            Loan calculator</a>
                     </div>
                 </div>
             </div>
