--- a/loan_helper/templates/loan_calculator.html
+++ b/loan_helper/templates/loan_calculator.html
@@ -58,7 +58,49 @@
 
 </table>
 
-{{ pie }}
+<div id="container" style="width: 100%;">
+    <canvas id="pie-chart" width="400" height="400"></canvas>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+  <script>
+
+    var config = {
+      type: 'pie',
+      data: {
+        datasets: [{
+          data: {{ data|safe }},
+          backgroundColor: [
+                'rgba(65, 131, 215, 1)',
+                'rgba(137, 196, 244, 1)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+          ],
+          borderColor: [
+                'rgba(65, 131, 215, 1)',
+                'rgba(137, 196, 244, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+          label: 'Loan'
+        }],
+        labels: {{ labels|safe }}
+      },
+      options: {
+        responsive: true
+      }
+    };
+
+    window.onload = function() {
+      var ctx = document.getElementById('pie-chart').getContext('2d');
+      window.myPie = new Chart(ctx, config);
+    };
+
+  </script>
 {% endif %}
 
 {% endblock %}
