about app added

--- a/loan_helper/templates/index.html
+++ b/loan_helper/templates/index.html
@@ -49,27 +49,43 @@
                 <h2>About app</h2>
                     <hr>
                     <p class="text-justify">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie odio ut neque maximus,
-                        id mattis urna aliquet. Sed in lacus sed ipsum semper varius. Sed porttitor est eget scelerisque
-                        laoreet. Etiam at facilisis mi. Ut sit amet molestie odio, vitae scelerisque ipsum. Curabitur egestas
-                        feugiat lectus. Donec quis gravida odio. In hac habitasse platea dictumst. Proin risus metus, convallis
-                        nec neque sodales, congue semper orci. Donec congue nisl vel sem egestas, non dignissim elit pretium.
-                        Ut bibendum odio ut imperdiet eleifend. Etiam porta sem et posuere consectetur. In eu sem vitae neque
-                        ornare pretium. Nam posuere metus vitae porttitor facilisis. Duis leo mauris, interdum et leo id,
-                        fringilla faucibus lectus.<br><br>
+                        Simple web application that allows to monitor progress of loans. Every customer has his
+                        own process, with hundreds of clients we can easy forget some information e.g. what status
+                        that customer have or what offer from bank he got. Trello has great functions but for me that
+                        was not enough. With this app we can track customers, add comments, calculate loans or generate
+                        report, not only for us but also for brokers who works with our company.<br><br></p>
 
-                        Integer malesuada eros sit amet commodo condimentum. Fusce faucibus commodo ante. In consequat in justo
-                        vel commodo. Quisque faucibus augue vitae pellentesque fermentum. Pellentesque pellentesque velit nec
-                        tincidunt ullamcorper. Quisque congue vulputate pulvinar. Vestibulum ut nunc id sem placerat cursus.
-                        Proin viverra turpis eget purus rhoncus, consectetur sollicitudin sapien volutpat. Morbi mattis, sapien
-                        eu dictum vehicula, augue augue convallis velit, et gravida erat dolor in lectus.<br><br>
+                        Technologies
+                        <hr>
+                        Python - version 3.7<br>
+                        Django - version 3.0.6<br>
+                        pytest - version 5.4.2<br>
+                        pytest-django - version 3.9.0<br>
+                        Faker - version 4.1,0<br>
+                        pytz - version 2020.1<br>
+                        psycopg2-binary - version 2.8.6<br>
+                        xhtml2pdf - version 0.2.5<br>
+                        numpy - version 1.19.0<br>
+                        Bootstrap - version 4.5.3<br>
+                        Chart js - version 2.9.3<br>
+                        <br><br>
 
-                        Ut ac lobortis urna. Nulla eu accumsan quam. Praesent augue nisl, bibendum a libero blandit,
-                        scelerisque porta nisi. Aenean finibus pellentesque ex, sit amet vulputate arcu efficitur sit amet.
-                        Cras eget ullamcorper enim. Phasellus accumsan urna in turpis vulputate, ut maximus orci molestie.
-                        Proin hendrerit eget mi vitae pretium. Fusce varius interdum tristique. Aliquam viverra orci nunc, in
-                        commodo magna cursus id.<br><br>
-                    </p>
+                        List of features ready and TODOs for future development
+                        <hr>
+                        Track customers progress<br>
+                        Calculate costs of loan<br>
+                        Generate reports<br><br>
+
+                        To-do list:
+                        <hr>
+                        Calculating creditworthiness<br>
+                        More statistics, graphs and charts<br>
+                        <br><br>
+
+                        <p class="text-justify">
+                        This is my final project for Coders Lab bootcamp - Python Developer.
+                        I personally use this app in my current job. It helps me stay informed about all customers.</p>
+
                 </div>
             </div>
         </div>
