minor changes in index

--- a/loan_helper/templates/index.html
+++ b/loan_helper/templates/index.html
@@ -57,8 +57,9 @@
 
                         Technologies
                         <hr>
-                        Python - version 3.7<br>
+                        Python - version 3.6.9<br>
                         Django - version 3.0.6<br>
+                        PostgreSQL - version 13.0<br>
                         pytest - version 5.4.2<br>
                         pytest-django - version 3.9.0<br>
                         Faker - version 4.1,0<br>
